BXC-5191 remove test